[package]
name = "flowmaid-desktop"
version = "0.6.2"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/go-routine-id/flowmaid-desktop"
publish = false # demo app — run from source

[dependencies]
# LOKAL sementara: path ke engine agar dapat `mindmap::route()` (drag)
# yang belum dirilis; sumber flowmaid sama dengan markmaid → tipe unifikasi.
# Kembalikan ke `flowmaid = "0.13"` setelah 0.13.1 rilis.
flowmaid = { path = "../diagram-engine-studio/flowrs" }
# Fitur default dipertahankan: accesskit TIDAK dibuang — pohon
# aksesibilitasnya lazy (baru dibangun saat screen reader terhubung),
# jadi biaya runtime-nya ~nol sedangkan membuangnya mematikan
# VoiceOver/NVDA (temuan verifikasi audit memory).
eframe = { version = "0.29", features = ["persistence"] }
rfd = "0.17.2"
# Mesin render Markdown (parse + layout → DocScene). Dipakai lokal via
# path dep (BELUM dipublish beriringan) — tarik flowmaid yang sama.
markmaid = { path = "../markmaid" }

# Rampingkan binary release dan bantu inlining lintas-crate.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
