[package]
name = "flowmaid-desktop"
version = "0.6.2"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/go-routine-id/flowmaid-desktop"
publish = false # demo app — run from source

[dependencies]
# 0.14 = rilis dengan mindmap (radial + route/drag) & journey; versi yang
# sama dipakai markmaid sehingga tipe flowmaid-nya terunifikasi.
flowmaid = "0.14"
# Fitur default dipertahankan: accesskit TIDAK dibuang — pohon
# aksesibilitasnya lazy (baru dibangun saat screen reader terhubung),
# jadi biaya runtime-nya ~nol sedangkan membuangnya mematikan
# VoiceOver/NVDA (temuan verifikasi audit memory).
eframe = { version = "0.29", features = ["persistence"] }
rfd = "0.17.2"
# Mesin render Markdown (parse + layout → DocScene). Dipakai lokal via
# path dep (BELUM dipublish beriringan) — tarik flowmaid yang sama.
markmaid = { path = "../markmaid" }

# Rampingkan binary release dan bantu inlining lintas-crate.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
